test/fail/error_optional_parameter.sest
module ErrorOptionalParameter = struct

  module Impl = struct
    val f(g) =
      {g(42), g(42, ?foo 57)}
  end

  include Impl :> sig
    val f<$a> : fun(fun(int) -> $a) -> {$a, $a}
  end

end
